@@ -1,3 +1,6 @@
+2014-04-16
+	* include contradictory cases to fs_truthTable
+	
 2012-04-13
 	* add vignette template
 	
